@@ -1,3 +1,9 @@
+2006-06-19  Vladimir Prus  <vladimir@codesourcery.com>
+
+	* ld-arm/arm-elf.exp: New test.
+	* ld-arm/use-thumb-lib.s: New file.
+	* ld-arm/use-thumb-lib.sym: New file.
+
 2006-06-15  Mark Shinwell  <shinwell@codesourcery.com>
 
 	* ld-arm/group-relocs-alu-bad.d: New test.
