@@ -1,3 +1,8 @@
+2006-06-19  Vladimir Prus  <vladimir@codesourcery.com>
+
+	* elf32-arm.c (elf32_arm_swap_symbol_out): Don't set low
+	bit for undefined symbols.
+
 2006-06-19  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf-bfd.h (struct elf_backend_data): Add bfd_link_info pointer
